--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "vertigo",
+  "name": "vertigo-sass",
   "version": "0.0.1",
   "homepage": "https://github.com/stephenway/vertigo",
   "authors": [
